--- a/css/styles.css
+++ b/css/styles.css
@@ -1812,6 +1812,7 @@ button:focus {
 .b-divider h3 {
   text-align: center; }
 
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 #skills-page .video-container {
   position: relative;
   width: 100%;
@@ -2906,7 +2907,7 @@ button:focus {
     color: white;
     margin-left: 15px; }
 #beth-page-temp .e-pic {
-  background-image: url("../img/team/beth-simone-noveck.jpg");
+
   background-size: cover;
   background-position: center top;
   overflow: hidden;
